--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,24 +14,29 @@ body{
     background-color: var(--bg-color);
     scroll-behavior: smooth;
 }
+/*
+    Hero section (navbar, logo, links etc)
+*/
 .hero__section{
     background: url('../img/bg.png') no-repeat center bottom;
     background-size: cover;
     min-height: 100vh;
     min-width: 100%;
+    background-attachment: fixed;
 }
 
 .hero__section .nav__container{
     padding-top: 20px;
+
     min-height: 60px;
 }
-
 .hero__section .nav__container .navbar{
     justify-content: space-between;
     display: flex;
     min-height: 60px;
     width: 75%;
     margin: auto;
+    align-items: center;
 }
 
 .hero__section .nav__container .navbar .nav__logo{
@@ -125,4 +130,251 @@ background-size: 100% 5px, 0 5px;
     background-repeat: no-repeat;
     transition: background-size 400ms;
   }
+  .mobile__menu{
+    display: none;
+  }
 
+  .hero__section .hero__texts{
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    color: #fff;
+  }
+  .hero__section .hero__texts .left{
+    margin-left: 12.5%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .hero__section .hero__texts .left h1{
+    font-weight: 700;
+    font-size: 3.5rem;
+    max-width: 70%;
+    margin-bottom: 0;
+  }
+  .hero__section .hero__texts .left p{
+    font-weight: 500;
+    color: #F7F7F7;
+    max-width: 70%;
+    font-size: 1.5rem;
+  }
+  .hero__section .hero__texts .left button{
+    border: 0;
+    font-size: 1.8rem;
+    color: #fff;
+    padding: 18px 100px;
+    background: linear-gradient(90deg, rgba(199, 227, 255, 0.413187) 0%, rgba(29, 141, 255, 0.8) 0.01%, rgba(113, 27, 255, 0.4) 44.79%, rgba(113, 27, 255, 0.552) 64.58%, rgba(113, 27, 255, 0.8) 100%), #1D8DFF;
+    border-radius: 40px 0px;;
+    width: fit-content;
+  }
+
+  .hero__section .hero__texts{
+    position: relative;
+  }
+
+  .hero__section .hero__texts .right{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+  }
+  .hero__section .hero__texts .right img{
+    height: 100px;
+  }
+  .hero__section .hero__texts .right .line__text{
+    border-top: 2px solid #fff;
+    border-right: 2px solid #fff;
+    padding: 100px 100px 390px 330px;
+    display: flex;
+    position: absolute;
+    bottom: -50px;
+    right: 100px;
+  }
+
+  .hero__section .hero__texts .right .line__text strike{
+    font-weight: 100;
+  }
+  .hero__section .hero__texts .right .line__text p{
+    width: 100px;
+    font-size: 1.3rem;
+  }
+  .hero__section .hero__texts .right img{
+    margin-top: -120px;
+    margin-left: -200px;
+  }
+  .hero__section .hero__texts .right .circle{
+    padding: 15px;
+    background: #ffffff;
+    border-radius: 50%;
+    margin-top: 20px;
+    position: absolute;
+    top: -36px;
+    left: -20px;
+  }
+  @media(max-width: 1440px){
+    .hero__section .hero__texts .right .line__text{
+        padding: 100px 100px 388px 115px;
+      }
+      .hero__section .hero__texts .right .circle{
+        padding: 15px;
+        background: #ffffff;
+        border-radius: 50%;
+        margin-top: 20px;
+        position: absolute;
+        top: -36px;
+        left: -20px;
+      }
+  }
+  @media(max-width: 1024px){
+    .hero__section .hero__texts .right .line__text{
+        border-top: 0;
+        border-right: 0;
+        border-bottom:  2px solid #fff;
+        padding: 100px 100px 10px 65px;
+        bottom: 50px;
+        left: 0;
+        right: 10%;
+      }
+      .hero__section .hero__texts .right .line__text p{
+        display: none;
+      }
+      .hero__section .hero__texts .right img{
+        margin-top: 0;
+        margin-left: 0;
+        position: absolute;
+        bottom: 0;
+        right: 5%;
+      }
+      .hero__section .hero__texts .right .circle{
+        top: auto;
+        left: auto;
+        bottom: -15px;
+        right: -1%;
+      }
+  }
+/*
+    Mobile
+*/  
+@media (max-width: 1300px) {
+    .hero__section .nav__container .navbar{
+        justify-content: space-between;
+        display: flex;
+        min-height: 60px;
+        width: 85%;
+        margin: auto;
+        align-items: center;
+
+    }
+    .hero__section .nav__container .navbar .nav__logo img{
+        min-height: 25px;
+    }
+
+    .mobile__menu{
+        width: 40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 8px;
+        align-items: center;
+    }
+    .mobile__menu div{
+        border-radius: 5px;
+        background: #fff;
+        border: 2px solid #fff;
+        width: 80%;
+        transition: all .3s ease-in-out;
+    }
+    .hero__section .nav__container .nav__links{
+        background: var(--dark-color);
+        position: fixed;
+        min-height: 100vh;
+        min-width: 100%;
+        left: 0;
+        top: 70px;
+        flex-direction: column;
+        justify-content: flex-start;
+        padding: 80px 0 0 0;
+        gap: 60px;
+        transform: translateX(100%);
+        transition: all .3s ease-in-out;
+    }
+    .hero__section .nav__container .nav__links li{
+        text-align: center;
+    } 
+    .hero__section .nav__container .nav__links.open{
+        transform: translateX(0);
+    }
+    .mobile__menu.open .line1{
+        transform: rotate(-45deg) translate(-10px, 8px);
+    }
+    .mobile__menu.open .line2{
+        opacity: 0;
+    }
+    .mobile__menu.open .line3{
+        transform: rotate(45deg) translate(-8px, -7px);
+    }
+}
+
+@media (max-width: 768px) {
+    .hero__section{
+        background: url('../img/bg-mobile.png') no-repeat center bottom;
+        background-size: cover;
+        min-height: 100vh;
+        min-width: 100%;
+        background-attachment: fixed;
+    }
+    .hero__section .hero__texts .right .circle {
+        top: auto;
+        left: auto;
+        bottom: -15px;
+        right: 0%;
+    }
+    .hero__section .hero__texts .right .line__text{
+        border-top: 0;
+        border-right: 0;
+        border-bottom:  2px solid #fff;
+        padding: 100px 100px 10px 65px;
+        bottom: 50px;
+        left: 0;
+        right: 12%;
+      }
+}
+
+@media (max-width: 320px) {
+    .hero__section .hero__texts{
+        width: 90%;
+        margin: auto;
+    }
+    .hero__section .hero__texts{
+        height: 700px;
+    }
+    .hero__section .hero__texts .left{
+        display: flex;
+        justify-content: center;
+    }
+    .hero__section .hero__texts .left h1{
+        max-width: 100%;
+    }
+    .hero__section .hero__texts .left p{
+        max-width: 100%;
+    }
+    .hero__section .hero__texts .left button{
+        width: 100%;
+        margin: auto;
+        padding: 18px 80px;
+    }
+    .hero__section .hero__texts .left{
+        margin-left: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    .hero__section .hero__texts .right .line__text{
+        border-top: 0;
+        border-right: 0;
+        border-bottom:  2px solid #fff;
+        padding: 100px 100px 10px 65px;
+        bottom: 50px;
+        left: -20px;
+        right: 16%;
+      }
+}
