--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -640,6 +640,10 @@ body {
         padding-right: 20px;
         width: 100%;
     }
+    .projects__section .cards {
+        padding-left: 0;
+        gap: 5px;
+    }
 }
 
 @media (max-width: 320px) {
