--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,6 +360,69 @@ body {
 .projects__section .projects__link{
     color: var(--violet-color);
 }
+.team__section{
+    background: var(--dark-color);
+    color: #fff;
+}
+
+.team__section .team__title{
+    font-size: 4rem;
+    line-height: 1;
+    margin-bottom: 0;
+    font-weight: 800;
+    background: linear-gradient(270deg, #711BFF 36.11%, rgba(29, 141, 255, 0) 100%), #1D8DFF;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: start;
+    text-transform: uppercase;
+}
+
+.team__section .team__subtitle{
+    font-size: 1.2rem;
+}
+
+.team__section .team__members .member__card{
+    background: rgba(9, 9, 9, 0.1);
+    display: flex;
+    padding: 10px 30px;
+    border-radius: 20px;
+    gap: 10px;
+    position: relative;
+    padding-bottom: 40px;
+}
+.team__section .team__members .member__card.card1{
+    box-shadow: -20px 15px 68px -31px #49A3FF;
+}
+.team__section .team__members .member__card.card2{
+    box-shadow: -20px 15px 68px -31px #0038c8;
+}
+.team__section .team__members .member__card.card3{
+    box-shadow: -20px 15px 68px -31px #711BFF;
+}
+
+
+.team__section .team__members .member__card .name{
+    font-size: 1.2rem;
+    margin-bottom: 0;
+}
+.team__section .team__members .member__card .role{
+    position: relative;
+    font-size: .8rem;
+}
+.team__section .team__members .member__card .socials{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+    margin: auto;
+}
+.team_container{
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+}
 
 @media(max-width: 1440px) {
     .hero__section .hero__texts {
@@ -554,6 +617,15 @@ body {
         font-size: 1.6rem;
         width: 50%;
     }
+    .team__members{
+        flex-direction: column;
+        margin: auto;
+        gap: 50px;
+    }
+    .team__members .member__card{
+        width: 100%;
+    }
+
 }
 
 @media (max-width: 768px) {
